complete addToList method